# intel-device-resource-mgt-lib

./: IDR-MGT-OpenSrc.pptx  LICENSE  README.md
app-sdk/java/code/: .classpath  .gitignore
app-sdk/java/doc/: .gitignore  README.MD  combine_gateway_sdk.sh  create_gateway_sdk_pakage.sh
app-sdk/python/: README
app-sdk/python/iagent_sdk/: __init__.py
app-sdk/python/samples/: .app_control_algorithm_for_mushroom.py.swm  .app_control_algorithm_for_mushroom.py.swn  .app_control_algorithm_for_mushroom.py.swo  .app_control_algorithm_for_mushroom.py.swp  appControlFansOnTemperature.py  appDeviceCalibrator.py  appFilterAbnormalValue.py  logging.conf  python_sdk_ams_interface_example.py  python_sdk_example.py
app-sdk/simulator/lwm2m/: Californium.properties  pom.xml
dev-setup/: eclipse-iagent-editor-profile.xml  prepare_dev.sh
framework/gw-broker/: README  iagent_build.sh  start.sh
framework/gw-broker/common/: CMakeLists.txt  broker_rest_convert.c  broker_rest_convert.h  module_common.c  module_common.h  module_constants.h
framework/gw-broker/main/: CMakeLists.txt
framework/gw-broker/main/src/: gw_broker_lin.json  gw_broker_test.json  main.c  product.json
framework/gw-broker/modules/: CMakeLists.txt
framework/gw-broker/modules/database_server/: CMakeLists.txt
framework/gw-broker/modules/database_server/inc/: database_module.h
framework/gw-broker/modules/database_server/src/: database_module.c
framework/gw-broker/modules/database_server/src/dp_cache/: dp_cache_db.c  dp_cache_db.h  dp_cache_server.c  dp_cache_server.h  ic_dpcache.cmake
framework/gw-broker/modules/iagent/: CMakeLists.txt
framework/gw-broker/modules/iagent/inc/: iagent.h
framework/gw-broker/modules/iagent/src/: iagent.c  rd_bus.cpp
framework/gw-broker/modules/lwm2m_server/: CMakeLists.txt
framework/gw-broker/modules/lwm2m_server/inc/: lwm2m_server.h  obs_manager.h
framework/gw-broker/modules/lwm2m_server/src/: client_reg_handler.c  command_handler.c  handle_bus_request.c  lwm2m_module.c  lwm2mserver.c  obs_manager.c  sleep_client.c  wrapper.cpp
framework/gw-broker/modules/proxy/: CMakeLists.txt
framework/gw-broker/modules/proxy/inc/: myredis.h  proxy.h  scredis.h
framework/gw-broker/modules/proxy/src/: myredis.c  proxy.c  scredis.c
framework/iagent-core/: CMakeLists.txt  iagent-core.cmake  iagent.ini  iagent_base.h  iagent_config.h.in
framework/iagent-core/resources/: ic_resources.cmake  ilink.c  res_rd.c  reset.c  v2_ams_config.c  v2_dp.c  v2_ibroker.c  v2_ilink.c  v2_rd.c  v2_rd_monitor.c  v2_refresher.c  v2_sys_resources.c  version.c
framework/iagent-core/src/: handshake.c  iagent_core.c  ic_src.cmake  ilink_frame.c  ilink_handler.c  ilink_message.h  ping.c  provision.c  variable_header.c
framework/iagent-core/src/devices/: CClient.cpp  CClient.h  CClientManager.cpp  CClientManager.h  CRefresherPoint.cpp  CRefresherPoint.h  CResObject.cpp  CResObject.h  CResProperty.cpp  CResProperty.h  CResRefresher.cpp  CResRefresher.h  CResValue.cpp  CResValue.h  CResource.cpp  CResource.h  cache_resource_value.cpp  calibration.cpp  configure.cpp  ic_devices.cmake  rd.cpp  rd.h  refresher.cpp
ibroker/: .gitignore
ibroker/alarm/: Dockerfile  pom.xml
ibroker/base/: pom.xml
ibroker/config/: .gitignore  Dockerfile  pom.xml
ibroker/event/: Dockerfile  pom.xml
ibroker/httpproxy/: Dockerfile  pom.xml
ibroker/ibroker/: Dockerfile  pom.xml
ibroker/mqttbridge/: .gitignore  Dockerfile  package.json  run.sh
ibroker/projectcenter/: Dockerfile  pom.xml
ibroker/sdk/: pom.xml
ibroker/stack/: pom.xml
ibroker/testbase/: pom.xml
idr-mgt-shared-libs/AMS-SDK/: CMakeLists.txt  ams_constants.h  ams_path.c  ams_path.h  ams_sdk_interface.h  ams_sdk_internal.h  ams_stub.c  ex_ams.cmake  interface.c  path.c  path.h  res_config_notify.c  sdk_internal.c
idr-mgt-shared-libs/AMS-SDK/python/ams/: __init__.py  ams_client.py  ams_request_action.py  app_config_check_point.py  app_config_watch_point.py  application_confige_utility.py
idr-mgt-shared-libs/AMS-SDK/python/ams_utils/: __init__.py  coap_exception.py  constants.py  log_util.py  media_type_format.py  my_coap_server.py  payload_parser.py  singleton.py  utils.py
idr-mgt-shared-libs/coap/: CMakeLists.txt  ex_coap.cmake
idr-mgt-shared-libs/coap/er-coap/: LICENSE  er-coap-block1.c  er-coap-context.c  er-coap-context.h  er-coap-engine.c  er-coap-engine.h  er-coap-observe.c  er-coap-observe.h  er-coap-res-well-known-core.c  er-coap-transactions.c  er-coap-transactions.h  er-coap.c  er-coap.h
idr-mgt-shared-libs/coap/extension/: CMakeLists.txt  blocking_coap_request.c  coap_ext.h  coap_over_tcp.c  coap_partial_parse.c  coap_platforms.c  coap_platforms.h  coap_request.c  coap_request.h  list.c  list_coap.h  request_handler.c  test_linux.c  test_vxworks.c
idr-mgt-shared-libs/coap/rest-engine/: CMakeLists.txt  rest-engine.c  rest-engine.h
idr-mgt-shared-libs/coap/ut/client/: CMakeLists.txt  coap_client_unit.c
idr-mgt-shared-libs/lib/: agent_core_lib.h  iagent_bsp.h  logs.c  logs.h  message_queue.c  misc.cpp  misc.h  path_util.c  ssg_lib.cmake  task.c  transaction.c  url_match.c
idr-mgt-shared-libs/utils/: parson_ext.c  parson_ext.h  ssg_utils.cmake  string_parser.c  string_parser.h  url_util.c
include/x86/: config.h
plugin-sdk/: CMakeLists.txt  build_plugin_sdk.sh  common.cmake
plugin-sdk/include/: module_entry.c  module_entry.h  plugin_constants.h  plugin_dlist.h  plugin_sdk.h  sdk_internals.h
plugin-sdk/samples/: CMakeLists.txt  build_samples.sh
plugin-sdk/samples/hello_world_client/: CMakeLists.txt
plugin-sdk/samples/hello_world_client/inc/: hello_world.h
plugin-sdk/samples/hello_world_client/src/: hello_world_client.c  response_callback.c  thread_waker.c
plugin-sdk/samples/hello_world_service/: CMakeLists.txt
plugin-sdk/samples/hello_world_service/inc/: hello_world.h
plugin-sdk/samples/hello_world_service/src/: app_impl.c  hello_world.c  resources.c  routines.c
plugin-sdk/src/: internals.c  message_coder.c  plugin_dlist.c  request_service.c  restful_framework.c  sdk_internals.h  working_thread.c
(+634 files in other folders)
